Share one startup sequence between the two loaders
The Fabric and NeoForge entrypoints were two files of a hundred and ninety
lines each, and the same hundred and ninety: load the config, build the
client, assemble the service, warm the limits, announce crash files, print
the startup lines. Only four calls differed. That arrangement asks every
future fix to be made twice and has nothing that notices when it was made
once.

AlaLoggerBootstrap holds the sequence, in common, where it can be built in a
unit test without a game. A loader module is now an adapter of about fifty
lines: name two directories, connect three events. checkLoaderParity fails
the build when the two stop matching - a shared step missing on one side,
logic that belongs in common appearing in a loader module, or a member one
has and the other does not - and self-tests over six synthetic pairs before
it reads a real file.

Three duplications collapsed with it. What counts as a usable apiBaseUrl is
decided once, in ApiEndpoint, which the config and the client both consult;
they used to disagree, and the disagreement was how a missing https:// could
stop a server from starting. Every file the mod writes goes through
AtomicFiles, which the history and the crash marker each had a copy of and
the config had none of - so a file holding an API token was written in place
and tightened afterwards. And the three spellings of "is the language
pinned" became two methods on Config.

Fixed along the way, none of it having reached anyone:

- A config whose apiBaseUrl could not be used was rewritten with the default,
  replacing a self-hosted address with ours and silencing the complaint about
  it for ever. The file is now left exactly as written.
- An apiBaseUrl ending in a fragment sent every request to the same address:
  paths are appended by concatenation, so the endpoint landed inside the
  fragment and was never transmitted. A query string did the same, and a port
  outside 1-65535 surfaced to the player as 